# docu-flow

./: .gitignore
backend/: .gitignore  Structure.md  alembic.ini  docuflow.db  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: dd0cc711a6d6_initial_tables.py
backend/src/: config.py  database.py  main.py
backend/src/api_keys/: models.py  repository.py  router.py
backend/src/auth/: deps.py  repository.py  router.py  schemas.py  service.py
backend/src/chat/: models.py  pipeline.py  repository.py  router.py  service.py
backend/src/core/: security.py
backend/src/ingestion/: pipeline.py
backend/src/knowledge_base/: models.py  repository.py  router.py  schemas.py  service.py
backend/src/prompts/: builder.py
backend/src/providers/: anthropic.py  base.py  factory.py  gemini.py  google.py  openai.py
backend/src/rag/: service.py
backend/src/users/: models.py  router.py
backend/src/vectorstore/: base.py  pinecone.py  repository.py
backend/uploads/: test.txt
frontend/: package-lock.json  package.json
frontend-1/: package-lock.json  package.json
frontend-1/app/: layout.tsx  page.tsx
frontend-1/app/chat/: page.tsx
frontend-1/app/kb/: page.tsx
frontend-1/app/keys/: page.tsx
frontend-1/app/login/: page.tsx
frontend-1/components/: app-shell.tsx  auth-layout.tsx  sidebar.tsx
frontend-1/hooks/: use-auth.ts  use-conversations.ts
frontend-1/lib/: api.ts  types.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/hooks/: use-conversations.ts
frontend/lib/: api.ts  auth.ts  models.ts  types.ts
(+32 files in other folders)
