[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.105.2",
    "bcrypt==4.0.1",
    "docling>=2.96.0",
    "fastapi[standard]>=0.136.3",
    "google-genai>=2.7.0",
    "openai>=2.38.0",
    "passlib>=1.7.4",
    "pinecone>=9.0.1",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.48.0",
]
